<resources>
    <string name="app_name">ClimateApp Mobile</string>
    <string name="app_title">ClimateApp</string>
    <string name="default_city">São Paulo</string>
    <string name="default_city_country">São Paulo, BR</string>
    <string name="city_search_hint">Digite uma cidade</string>
    <string name="search">Buscar previsão</string>
    <string name="forecast_title">Previsão dos próximos dias</string>
    <string name="error_empty_city">Digite o nome de uma cidade para buscar.</string>
    <string name="loading_weather">Carregando dados...</string>
    <string name="loading_temperature">--°C</string>
    <string name="loading_feels_like">Sensação\n--°C</string>
    <string name="loading_humidity">Umidade\n--%</string>
    <string name="loading_wind">Vento\n-- km/h</string>
    <string name="offline_data_message">Sem conexão ou falha na busca. Exibindo a última previsão salva no SQLite.</string>
    <string name="empty_forecast">Nenhuma previsão salva para esta cidade.</string>
    <string name="city_country">%1$s, %2$s</string>
    <string name="temperature">%1$d°C</string>
    <string name="feels_like">Sensação\n%1$d°C</string>
    <string name="humidity">Umidade\n%1$d%%</string>
    <string name="wind">Vento\n%1$d km/h</string>
    <string name="forecast_item">%1$s - %2$s\nMin: %3$d°C | Max: %4$d°C</string>
</resources>
